--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cms-notify (1.0.0-zeit2) unstable; urgency=medium
+
+  * Compress deb with gzip so it works with Ubuntu-10
+
+ -- Wolfgang Schnerring <wolfgang.schnerring@zeit.de>  Mon, 05 Sep 2016 12:07:53 +0200
+
 cms-notify (1.0.0-zeit1) unstable; urgency=medium
 
   * Initial packaging
